[package]
name = "reth_gnosis"
version = "0.1.0"
edition = "2021"

[lib]
name = "reth_gnosis"
path = "src/lib.rs"

[[bin]]
name = "reth"
path = "src/main.rs"

[[bin]]
name = "create_snapshot"
path = "src/bin/create_snapshot.rs"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-prune-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-fs-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1", features = [
    "test-utils",
] }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-stages = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-stages-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-stages-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
eyre = "0.6"
clap = { version = "4.5.6", features = ["derive"] }
derive_more = { version = "2", default-features = false, features = ["full"] }

# revm
revm = { version = "27.0.2", features = ["std"], default-features = false }
revm-database = { version = "7.0.1", default-features = false }
revm-state = { version = "7.0.1", default-features = false }
revm-primitives = { version = "20.0.0", features = [
    "std",
], default-features = false }
revm-inspectors = "0.26.5"

serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0.94"
serde_with = "3.3.0"
hex = "0.4.3"
walkdir = "2.3.3"
thiserror = { version = "2.0.0", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }

# eth
alloy-chains = { version = "0.2.5", default-features = false }
alloy-evm = { version = "0.14", default-features = false }
alloy-dyn-abi = "1.2.0"
alloy-primitives = { version = "1.2.0", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-sol-types = "1.2.0"
alloy-trie = { version = "0.9.0", default-features = false }

alloy-consensus = { version = "1.0.18", default-features = false }
alloy-eips = { version = "1.0.18", default-features = false }
alloy-genesis = { version = "1.0.18", default-features = false }
alloy-sol-macro = "1.2.0"
alloy-serde = { version = "1.0.18", default-features = false }
rayon = "1.7"

tracing = "0.1.0"
reqwest = "0.12"
tokio = "1"
anyhow = "1.0.98"
indicatif = "0.17"
zstd = "0.12"
tar = "0.4"
xz2 = "0.1"

[dev-dependencies]
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.5.1" }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
rand = "0.8"

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", optional = true }
libc = "0.2"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
testing = []
failing-tests = []
serde = []
